add-menu-item and menu are ready

--- a/Angular2024/src/app/nav/nav.component.html
+++ b/Angular2024/src/app/nav/nav.component.html
@@ -8,6 +8,12 @@
     <a *ngIf="!(userService.isLogged | async)" routerLink="/register"
       >Register</a
     >
+    <a *ngIf="userService.isLogged | async" routerLink="/menu"
+      >Menu</a
+    >
+    <a *ngIf="(userService.isLogged | async) && (isAdministrator$ | async)" routerLink="/add-menu-item"
+    >Add Menu Item</a
+  >
     <a *ngIf="userService.isLogged | async" routerLink="/dashboard"
       >Dashboard</a
     >
