--- a/Angular2024/src/app/guests/guests.component.html
+++ b/Angular2024/src/app/guests/guests.component.html
@@ -8,7 +8,7 @@
             <div class="guest-details">
                 Role: {{ guest.role }}
                 <br>
-                Group: {{ guest.group }}
+                People attending: {{ guest.group }}
             </div>
         </div>
     </div>
