--- a/Angular2024/src/app/guests/guests.component.html
+++ b/Angular2024/src/app/guests/guests.component.html
@@ -10,6 +10,12 @@
                 <br>
                 People attending: {{ guest.group }}
             </div>
+            <!-- <div *ngFor="let guest of guests$ | async">
+                <p>{{ guest.name }} - Travelling from: {{ guest.travelOrigin || 'Not specified' }}</p>
+            </div> -->
+            <div>
+                <!-- <p>Travelling from: {{ guest.country || 'Not specified' }}</p> -->
+            </div>
         </div>
     </div>
 </div>
