--- a/Angular2024/src/app/nav/nav.component.html
+++ b/Angular2024/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
   <div class="links">
     <a routerLink="/">Home</a>
     <a *ngIf="!(userService.isLogged | async)" routerLink="/dashboard"
@@ -27,6 +27,30 @@
     <a *ngIf="userService.isLogged | async" (click)="userService.logout()"
       >Logout</a
     >
+  </div>
+  <div class="username">
+    <span *ngIf="authService.currentUserDetails$ | async as userDetails">
+      {{ userDetails.name || userDetails.email }}
+    </span>
+  </div>
+</nav> -->
+
+<nav>
+  <div class="menu-toggle" (click)="toggleMenu()">
+    &#9776;
+  </div>
+  <div class="links" [class.show]="menuOpen">
+    <a routerLink="/">Home</a>
+    <a *ngIf="!(userService.isLogged | async)" routerLink="/dashboard">Dashboard</a>
+    <a *ngIf="!(userService.isLogged | async)" routerLink="/login">Login</a>
+    <a *ngIf="!(userService.isLogged | async)" routerLink="/register">Register</a>
+    <a *ngIf="userService.isLogged | async" routerLink="/dashboard">Dashboard</a>
+    <a *ngIf="(userService.isLogged | async) && (isAdministrator$ | async)" routerLink="/add-event">Add Event</a>
+    <a *ngIf="userService.isLogged | async" routerLink="/menu">Menu</a>
+    <a *ngIf="(userService.isLogged | async) && (isAdministrator$ | async)" routerLink="/add-menu-item">Add Menu Item</a>
+    <a *ngIf="userService.isLogged | async" routerLink="/guests">Guests</a>
+    <a *ngIf="userService.isLogged | async" routerLink="/edit-guest">Edit my profile</a>
+    <a *ngIf="userService.isLogged | async" (click)="userService.logout()">Logout</a>
   </div>
   <div class="username">
     <span *ngIf="authService.currentUserDetails$ | async as userDetails">
