--- a/Angular2024/src/app/event-details/event-details.component.css
+++ b/Angular2024/src/app/event-details/event-details.component.css
@@ -145,4 +145,36 @@ select {
     max-width: 100%;
     margin: 10px auto;
   }
+  .card h2, h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .card h3 {
+    font-size: 18px;
+  }
+  
+  .card p {
+    font-size: 16px;
+    line-height: 1;
+    margin-bottom: 10px;
+  }
+
+  button {
+    color: #fff;
+    background-color: rgb(98, 110, 34);
+    border-color: rgb(98, 110, 34);
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-clip: padding-box;
+    border: 1px solid transparent;
+    padding: 0.15rem 1.5rem;
+    font-size: 0.5rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
 }
