--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -41,6 +41,7 @@
         <option value="Bulgaria">Bulgaria</option>
         <option value="Germany">Germany</option>
         <option value="Malta">Malta</option>
+        <option value="UK">United Kingdom</option>
         <option value="other">Other</option>
       </select>
     </div>
