--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -51,6 +51,16 @@
   .card-text {
     margin-bottom: 1.25rem;
   }
+
+  .button-like {
+    position: relative;
+    display: flex;
+  }
+  .button-like p {
+    font-size: 0.7rem;
+    margin-left: 10px;
+    align-self: center;
+  }
   
   .btn-primary {
     color: #fff;
@@ -63,8 +73,8 @@
     user-select: none;
     background-clip: padding-box;
     border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
+    padding: 0.15rem 0.75rem;
+    font-size: 0.7rem;
     line-height: 1.5;
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
