fix: username in mobile view

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -28,3 +28,9 @@ header.shrunk .header-image {
 :not(.shrunk) {
   height: 95vh;
 }
+
+@media (max-width: 768px) {
+  header {
+    height: 90vh; 
+  }
+}
