feat: Guest-book created

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -44,6 +44,7 @@
     <a *ngIf="!(userService.isLogged | async)" routerLink="/dashboard">Dashboard</a>
     <a *ngIf="!(userService.isLogged | async)" routerLink="/login">Login</a>
     <a *ngIf="!(userService.isLogged | async)" routerLink="/register">Register</a>
+    <a *ngIf="userService.isLogged | async" routerLink="/guest-book">Guest book</a>
     <a *ngIf="userService.isLogged | async" routerLink="/dashboard">Dashboard</a>
     <a *ngIf="(userService.isLogged | async) && (isAdministrator$ | async)" routerLink="/add-event">Add Event</a>
     <a *ngIf="userService.isLogged | async" routerLink="/menu">Menu</a>
