--- a/src/app/guest-book/guest-book.component.css
+++ b/src/app/guest-book/guest-book.component.css
@@ -32,10 +32,12 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-right: 15px;
   }
   
   .guest-book-container button[disabled] {
     background-color: #ccc;
+    margin-right: 15px;
   }
   
   .guest-book-entry {
