--- a/src/app/guest-book/guest-book.component.css
+++ b/src/app/guest-book/guest-book.component.css
@@ -24,7 +24,7 @@
     border-radius: 4px;
   }
   
-  .guest-book-container button {
+  /* .guest-book-container button {
     display: inline-block;
     padding: 10px 20px;
     color: #fff;
@@ -33,7 +33,7 @@
     border-radius: 4px;
     cursor: pointer;
     margin-right: 15px;
-  }
+  } */
   
   .guest-book-container button[disabled] {
     background-color: #ccc;
@@ -53,18 +53,50 @@
     color: #777;
   }
   
-  .guest-book-entry button {
+  /* .guest-book-entry button {
     margin-right: 10px;
-    background-color: #dc3545; /* Red for delete */
-  }
+    background-color: #dc3545; 
+  } */
   
-  .guest-book-entry button:nth-child(2) {
-    background-color: #007bff; /* Blue for edit */
-  }
+  /* .guest-book-entry button:nth-child(2) {
+    background-color: #007bff;
+  } */
   
   .guest-book-entry textarea {
     width: 100%;
     height: 50px;
     margin-bottom: 10px;
   }
+
+  .message-to-guests {
+    text-indent: 25px;
+    margin-bottom: 25px;
+    font: italic small-caps bold 22px/30px "Comic Sans MS", serif;
+    color:#222;
+  }
   
+
+  
+  button {
+    color: #fff;
+    background-color: rgb(98, 110, 34);
+    border-color: rgb(98, 110, 34);
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-clip: padding-box;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+  
+  button:hover {
+    background-color: rgb(49, 55, 17);
+    border-color:  rgb(49, 55, 17);
+  }
