--- a/src/app/guest-book/guest-book.component.css
+++ b/src/app/guest-book/guest-book.component.css
@@ -38,11 +38,17 @@
   .guest-book-container button[disabled] {
     background-color: #ccc;
     margin-right: 15px;
+
   }
   
-  .guest-book-entry {
+  /* .guest-book-entry { */
+  .entry {
     border-bottom: 1px solid #ddd;
-    padding: 10px 0;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin: 10px 0;
+    box-shadow: 10px 5px 5px rgba(173, 173, 123, 0.959);
   }
   
   .guest-book-entry p {
@@ -88,8 +94,8 @@
     user-select: none;
     background-clip: padding-box;
     border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
+    padding: 0.125rem 0.35rem;
+    font-size: 0.8rem;
     line-height: 1.5;
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
