--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,6 +35,24 @@
   </section>
 
   <section>
+    <h2>Getting there</h2>
+    <p>
+      If you travel by plane, it might be convenient to consider Vienna international airport, 
+      as it is less than 1 hour away from Bratislava and a number of shuttle busses are connecting 
+      the airport to the center of Bratislava (<strong><a href="https://online.slovaklines.sk/search?d=2024-07-26&fcls=BONUS_SCHEME_GROUP.ADULT,1&lang=en&fS=241&tS=235">SlovakLines</a>, <a href="https://shop.global.flixbus.com/search?departureCity=40df34e5-8646-11e6-9066-549f350fcb0c&arrivalCity=40de54de-8646-11e6-9066-549f350fcb0c&route=Vienna+Airport-Bratislava&rideDate=26.07.2024&adult=1&_locale=en&features%5Bfeature.enable_distribusion%5D=1&features%5Bfeature.train_cities_only%5D=0&features%5Bfeature.auto_update_disabled%5D=0&features%5Bfeature.webc_search_station_suggestions_enabled%5D=0&features%5Bfeature.darken_page%5D=1&atb_pdid=5626330a-8086-42f7-8fe7-257a337d3b14&_sp=de9ada6c-d5b7-417f-8e66-4db13b18c9f1&_spnuid=3e60f311-a883-4b6d-80e0-8f840f4717de_1716649559776">FlixBus</a>, <a href="https://regiojet.com/?locale=en&departureDate=2024-07-26&fromLocationId=10204055&toLocationId=10204001&fromLocationType=STATION&toLocationType=STATION&tariffs=REGULAR">Student Agency</a></strong>).
+    </p>
+    <p>
+      If you travel from Sofia (Bulgaria), the most convenient <strong><a href="https://www.ryanair.com/mt/en/trip/flights/select?adults=1&teens=0&children=0&infants=0&dateOut=2024-07-26&dateIn=&isConnectedFlight=false&discount=0&promoCode=&isReturn=false&originIata=SOF&destinationIata=VIE&tpAdults=1&tpTeens=0&tpChildren=0&tpInfants=0&tpStartDate=2024-07-26&tpEndDate=&tpDiscount=0&tpPromoCode=&tpOriginIata=SOF&tpDestinationIata=VIE">flights to Vienna are on 26th of July in the evening with Ryanair</a></strong>.
+      There is also a direct flight to Bratislava on 23th of July. 
+      The flight back on Sunday can be from Bratislava airport, departing at 11:30. 
+    </p>
+    <p>
+      If you travel from Malta, the most convenient <strong><a href="https://www.ryanair.com/mt/en/trip/flights/select?adults=1&teens=0&children=0&infants=0&dateOut=2024-07-26&dateIn=&isConnectedFlight=false&discount=0&isReturn=false&promoCode=&originIata=MLA&destinationIata=VIE&tpAdults=1&tpTeens=0&tpChildren=0&tpInfants=0&tpStartDate=2024-07-26&tpEndDate=&tpDiscount=0&tpPromoCode=&tpOriginIata=MLA&tpDestinationIata=VIE">flight to Vienna is on 26th of July at 09:50 with Ryanair</a></strong>. 
+      The flight back on Sunday can be from Bratislava airport at 18:55 or Vienna airport at 18:05. 
+    </p>
+  </section>
+
+  <section>
     <h2>Your Presence</h2>
     <p>
       Your presence at our wedding means the world to us. This celebration
