--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,11 +25,11 @@
     <h2>Event Details</h2>
     <p>
       The ceremony will take place at the picturesque
-      <strong>St. Nicholas Orthodox Church in Bratislava</strong>, an enchanting
+      <strong><a href="https://en.wikipedia.org/wiki/St._Nicholas_Church,_Bratislava">St. Nicholas Orthodox Church in Bratislava</a></strong>, an enchanting
       location that captured our hearts from the moment we saw it. We've planned
       a day that we hope will be as memorable for you as it will be for us,
       filled with joy, laughter, and love. The detailed schedule includes the
-      ceremony time, reception, dinner, and dancing hours, ensuring you know
+      ceremony time, reception, dinner and dancing hours at <strong><a href="https://www.hotel-premium.sk/en/">Premium Business Hotel Bratislava</a></strong>, ensuring you know
       exactly where to be and when.
     </p>
   </section>
@@ -64,7 +64,7 @@
       Please take a moment to explore our site, where you'll find photo
       galleries of our journey together, a guest book we'd love for you to sign,
       and more about the event we're so eagerly anticipating. Don't forget to
-      RSVP by <strong>13 July 2024</strong> to help us make the necessary
+      RSVP by <strong>1 July 2024</strong> to help us make the necessary
       arrangements for a perfect day.
     </p>
   </section>
