--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -29,6 +29,7 @@
   box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
   border-radius: 0.25rem;
   margin-bottom: 20px;
+  min-height: 57vh;
 }
 
 .card-img-top {
