feat: groom bride

--- a/src/app/bride-groom-intro/bride-groom-intro.component.html
+++ b/src/app/bride-groom-intro/bride-groom-intro.component.html
@@ -1,16 +1,28 @@
 <app-header />
 <app-nav />
-<div *ngIf="bride">
-    <h2>Meet the Bride</h2>
-    <img [src]="bride.finalPhotoURL" alt="{{ bride.name }}" class="intro-photo"/>
-    <p>{{ bride.name }}</p>
-    <!-- <p>{{ bride.description }}</p>  -->
-  </div>
-  
-  <div *ngIf="groom">
-    <h2>Meet the Groom</h2>
-    <img [src]="groom.finalPhotoURL" alt="{{ groom.name }}" class="intro-photo"/>
-    <p>{{ groom.name }}</p>
-    <!-- <p>{{ groom.description }}</p> -->
-  </div>
+<main>
+    <section>
+        <article *ngIf="bride">
+            <h2>Meet the Bride</h2>
+            <div class="top">
+                <div class="left">
+                    <img [src]="bride.finalPhotoURL" alt="{{ bride.name }}" class="intro-photo"/>
+                    <h3>I'm {{ bride.name.split(" ")[0] }} 🐇💕</h3>
+                </div>
+                <p>{{ bride.description }}</p> 
+            </div>
+    </article>
+    
+    <article *ngIf="groom">
+            <h2>Meet the Groom</h2>
+            <div class="top">
+                <div class="left">
+                <img [src]="groom.finalPhotoURL" alt="{{ groom.name }}" class="intro-photo"/>
+                <h3>I'm {{ groom.name.split(" ")[0] }} ⛱💕</h3>
+            </div>
+            <p>{{ groom.description }}</p>
+        </div>
+    </article>
+</section>
+</main>
   
