--- a/src/app/bride-groom-intro/bride-groom-intro.component.css
+++ b/src/app/bride-groom-intro/bride-groom-intro.component.css
@@ -3,14 +3,60 @@
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 15px;
+    margin: 25px;
   }
   
   h2 {
-    margin-top: 20px;
+    margin: 20px;
     color: #333;
+    margin: 20px 0 0 20px;
+  }
+
+  h3 {
+    margin: 0 auto;
   }
   
   p {
     color: #666;
+    font-size: 0.8rem;
+    margin:20px;
   }
+
+  section {
+    margin: 20px;
+   }
+
+  article {
+    width: 55vw;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px #0000001a;
+    margin: 20px auto;
+    background-color: #ffe;
+  }
+
+  .top {
+    display: flex;
+  }
+  
+  .left {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+  }
+
+  /* Tablet styles */
+  @media (max-width: 1280px) {
+    article {
+      width: 85vw;
+    }
+  }
+
+  /* Mobile styles */
+@media (max-width: 768px) {
+  .top {
+    flex-direction: column;
+  }
+  .left, .left p  {
+    margin: 0 auto;
+  }
+}
