--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -42,10 +42,10 @@ h1 {
     box-sizing: border-box;
   }
   
-  button {
+   /* button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff; /* Bootstrap 'primary' color for the button */
+    background-color: #007bff; 
     color: white;
     border: none;
     border-radius: 4px;
@@ -55,17 +55,47 @@ h1 {
   }
   
   button:hover {
-    background-color: #0056b3; /* A darker shade of the primary color for hover effect */
+    background-color: #0056b3; 
   }
   
   button:disabled {
     background-color: #cccccc;
     cursor: not-allowed;
-  }
+  } */
   
   /* Styling for error messages (if you decide to add them later) */
   .error-message {
     color: #d9534f; /* Bootstrap 'danger' color for error messages */
     font-size: 0.9rem;
+    /* margin-top: 10px; */
   }
   
+  button {
+    width: 100%;
+    color: #fff;
+    background-color: rgb(98, 110, 34);
+    border-color: rgb(98, 110, 34);
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-clip: padding-box;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+  
+  button:hover {
+    background-color: rgb(49, 55, 17);
+    border-color:  rgb(49, 55, 17);
+  }
+  
+  button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
