--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,7 +6,10 @@
     transition: width 2s;
 }
 
-/* login.component.css */
+p {
+  margin-top: 25px;
+  font-size: 0.8rem;
+}
 
 h1 {
     text-align: center;
@@ -42,32 +45,10 @@ h1 {
     box-sizing: border-box;
   }
   
-   /* button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff; 
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1rem;
-    margin-top: 10px;
-  }
-  
-  button:hover {
-    background-color: #0056b3; 
-  }
-  
-  button:disabled {
-    background-color: #cccccc;
-    cursor: not-allowed;
-  } */
-  
   /* Styling for error messages (if you decide to add them later) */
   .error-message {
     color: #d9534f; /* Bootstrap 'danger' color for error messages */
     font-size: 0.9rem;
-    /* margin-top: 10px; */
   }
   
   button {
