fix: home page header behavior

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<header [class.shrunk]="isShrunk">
+<!-- <header [class.shrunk]="isShrunk"> -->
+  <header [ngClass]="{ 'shrunk': isShrunk }">
   <img
     class="header-image"
     src="https://as1.ftcdn.net/v2/jpg/01/91/54/54/1000_F_191545466_EWytxrAb3h1vYjJ0vvvJzsWMca0ZNyrR.jpg"
