--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,22 +14,24 @@
 
 <app-header />
 <app-nav />
-<div class="menu-container">
-  <div *ngFor="let item of menuItems$ | async" class="menu-item">
-    <img [src]="item.image" alt="{{ item.title }}" class="menu-image" />
-    <div class="menu-details">
-      <h3>{{ item.title }}</h3>
-      <p>{{ item.type }}</p>
-      <p *ngIf="item.ingredients">Ingredients: {{ item.ingredients }}</p>
-      <div class="button-like">
-        <button
-          class="btn-primary"
-          *ngIf="item.id"
-          (click)="toggleLike(item.id)"
-        >
-          Like ({{ item.likes || 0 }})
-        </button>
-        <p>{{ item.liked ? "Liked" : "" }}</p>
+<div class="wrapper">
+  <div class="menu-container">
+    <div *ngFor="let item of menuItems$ | async" class="menu-item">
+      <img [src]="item.image" alt="{{ item.title }}" class="menu-image" />
+      <div class="menu-details">
+        <h3>{{ item.title }}</h3>
+        <p>{{ item.type }}</p>
+        <p *ngIf="item.ingredients">Ingredients: {{ item.ingredients }}</p>
+        <div class="button-like">
+          <button
+            class="btn-primary"
+            *ngIf="item.id"
+            (click)="toggleLike(item.id)"
+          >
+            Like ({{ item.likes || 0 }})
+          </button>
+          <p>{{ item.liked ? "Liked" : "" }}</p>
+        </div>
       </div>
     </div>
   </div>
