feat: password reset

--- a/src/app/forgot-password/forgot-password.component.css
+++ b/src/app/forgot-password/forgot-password.component.css
@@ -7,11 +7,11 @@
 }
 
 .wrapper {
-  min-height: 72vh;
+min-height: 73vh;
 }
 
 p {
-  margin-top: 25px;
+  margin-top: 45px;
   font-size: 0.8rem;
 }
 
@@ -43,7 +43,7 @@ h1 {
   input[type="password"] {
     width: 100%;
     padding: 10px;
-    margin-top: 5px;
+    margin: 5px 0 25px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
