--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,8 @@
 <app-header />
 <app-nav />
-<h1>LOGIN</h1>
-<form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+<section class="wrapper">
+  <h1>LOGIN</h1>
+  <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
     <div>
       <label for="email">Email:</label>
       <input type="email" formControlName="email" id="email">
@@ -21,6 +22,7 @@
     </div>
     <button type="submit" [disabled]="!loginForm.valid">Login</button>
     <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div> <!-- Display error message -->
+    <p><a routerLink="/forgot-password">Forgot Password?</a></p>
     <p>Not registered yet? <a routerLink="/register">→ Register</a></p>
   </form>
-  
+</section>
