--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -47,7 +47,7 @@
     <a *ngIf="userService.isLogged | async" routerLink="/guest-book">Guest book</a>
     <!-- <a *ngIf="!(userService.isLogged | async)"routerLink="/bride-groom">Bride & Groom</a> -->
     <a *ngIf="(userService.isLogged | async)"routerLink="/bride-groom">Bride & Groom</a>
-    <a *ngIf="userService.isLogged | async" routerLink="/dashboard">Dashboard</a>
+    <a *ngIf="userService.isLogged | async" routerLink="/dashboard">Events</a>
     <a *ngIf="(userService.isLogged | async) && (isAdministrator$ | async)" routerLink="/add-event">Add Event</a>
     <a *ngIf="userService.isLogged | async" routerLink="/menu">Menu</a>
     <a *ngIf="(userService.isLogged | async) && (isAdministrator$ | async)" routerLink="/add-menu-item">Add Menu Item</a>
