--- a/src/app/guests/guests.component.html
+++ b/src/app/guests/guests.component.html
@@ -6,7 +6,7 @@
         <div class="guest-info">
             <div class="guest-name">{{ guest.name }}</div>
             <div class="guest-details">
-                <strong>Role:</strong> {{ guest.role }}
+                <!-- <strong>Role:</strong> {{ guest.role }} -->
                 <br>
                 <strong>People attending:</strong> {{ guest.group }}
                 <br>
